# lightbulb-ext-hecate

./: .gitignore  LICENSE  README.md  pyproject.toml
lightbulb/ext/hecate/: __init__.py  __main__.py  errors.py  params.py  plugin.py  properties.py  props.py
lightbulb/ext/hecate/template/: __modify__.py
lightbulb/ext/hecate/template/events/: GuildMessageCreateEvent.py  _GuildMessageDeleteEvent.py
lightbulb/ext/hecate/template/slash-commands/: ping.py  ping_count.py  pong_count.py
lightbulb_ext_hecate/: __init__.py  errors.py  params.py  plugin.py
